--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,3 +55,21 @@ p {
 footer.page-footer {
   margin: 0;
 }
+
+
+.memo .info {
+    font-size: 18px;
+    padding: 20px 20px 40px 20px;
+    color: #90A4AE;
+}
+
+.memo .card-content {
+	word-wrap: break-word;
+	white-space: pre-wrap;
+    font-size: 18px;
+}
+
+.memo .footer {
+    border-top: 1px solid #ECECEC;
+    height: 45px;
+}
